--- a/src/components/Player/Player.module.css
+++ b/src/components/Player/Player.module.css
@@ -6,13 +6,15 @@
     text-shadow: 0 0 2px rgba(0, 0, 0, .5);
     border-radius: 4px;
     background: #000;
-    max-width: 1024
+    max-width: 1024;
+    min-height: 340px;
+    max-height: 580px;
 }
 
 .video {
     width: auto;
     max-width: 100%;
-    height: 100%;
+    min-height: 340px;
     border-radius: 4px;
     transition: all 1s ease-in-out;
 }
@@ -23,6 +25,11 @@
     bottom: 0;
     min-width: 100%;
     min-height: 100%;
+    z-index: 100;
+}
+
+.fullScreen .video {
+    position: absolute;
 }
 
 .gradient {
@@ -40,57 +47,71 @@
     left: 0;
     width: 100%;
     height: 100%;
-    background: url(./assets/animations/oval.svg) center no-repeat;
-    background-size: 100px;
-    display: none
-}
-
-.videoPlay {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    width: 80px;
-    height: 80px;
-    margin: -40px 0 0 -40px;
-    background: url(./assets/icons/play.svg) 60% no-repeat rgba(0, 0, 0, .3);
-    ;
-    background-size: 40px;
-    border-radius: 100%;
-    cursor: pointer;
-}
-
-.video-play.started {
-    width: 240px;
-    height: 250px;
-    margin: -120px 0 0 -120px;
-    background-size: 120px;
-    transition: all 1s;
-    opacity: 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 .loadedTitle {
     position: absolute;
     top: 50%;
     left: 50%;
-    width: 62px;
-    height: 22px;
+    margin: -15px 0 0 -30px;
+    width: 60px;
+    line-height: 30px;
     text-align: center;
-    margin: -11px 0 0 -31px;
     color: #eee;
     font-size: 20px;
     font-weight: bold;
     text-align: center;
 }
 
+.videoPlayToggle {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background-color: transparent;
+}
+
+.videoPlay {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    width: 90px;
+    height: 90px;
+    margin: -45px 0 0 -45px;
+    background: rgba(0, 0, 0, .66);
+    border-radius: 100%;
+    cursor: pointer;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    opacity: 1;
+}
+
+.videoPlay.animate {
+    width: 240px;
+    height: 240px;
+    margin: -120px 0 0 -120px;
+    background-size: 120px;
+    transition: all 1s;
+    opacity: 0;
+}
+
 .controls {
     position: absolute;
     bottom: 0;
     left: 0;
-    width: 98%;
-    padding: 0 1%;
+    width: 100%;
     height: 55px;
     color: #eee;
-    background: rgba(0, 0, 0, .12);
+    background: rgba(0, 0, 0, .18);
+    display: none;
+}
+
+.player:hover .controls,
+.player.paused .controls {
+    display: block;
 }
 
 .buttons {
@@ -101,10 +122,12 @@
     padding: 0 0.5%;
 }
 
-.buttonsLeft, .buttonsRight {
+.buttonsLeft,
+.buttonsRight {
     display: flex;
     align-items: center;
     gap: 12px;
+    margin: 0 1%;
 }
 
 .buttonsRight {
@@ -141,11 +164,12 @@
     fill: #e6e6e6;
 }
 
-.button:hover .buttonIcon  {
+.button:hover .buttonIcon {
     fill: #fff;
 }
 
-.pause, .mute {
+.pause,
+.mute {
     display: none;
 }
 
@@ -315,11 +339,13 @@
     min-width: 14px;
 }
 
-.playing .gradient, .playing .controls {
+.playing .gradient,
+.playing .controls {
     display: none;
 }
 
-.player:hover .gradient, .player:hover .controls {
+.player:hover .gradient,
+.player:hover .controls {
     display: block;
 }
 
