--- a/src/components/Player/Player.module.css
+++ b/src/components/Player/Player.module.css
@@ -8,7 +8,7 @@
     border-radius: 4px;
     background: #000;
     width: 100%;
-    max-width: 1024;
+    max-width: 1024px;
     min-height: 320px;
     max-height: 580px;
 }
